--- a/.github/workflows/develop_react.yml
+++ b/.github/workflows/develop_react.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: [Develop] Node.js Build
 
 on:
   pull_request:
@@ -20,6 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
