--- a/.github/workflows/develop_react.yml
+++ b/.github/workflows/develop_react.yml
@@ -1,4 +1,4 @@
-name: Develop Node.js Build
+name: [Develop] Node.js Build
 
 on:
   pull_request:
@@ -22,5 +22,8 @@ jobs:
         cache: 'npm'
         cache-dependency-path: '**/package-lock.json'
     - run: npm ci
+      working-directory: ./src/client/recipes-app/
     - run: npm run build --if-present
+      working-directory: ./src/client/recipes-app/
     - run: npm test
+      working-directory: ./src/client/recipes-app/
