--- a/.github/workflows/develop_react.yml
+++ b/.github/workflows/develop_react.yml
@@ -3,6 +3,10 @@ name: [Develop] Node.js Build
 on:
   pull_request:
     branches: [ "main" ]
+    
+defaults:
+  run:
+    working-directory: ./src/client/recipes-app
 
 jobs:
   build:
@@ -20,10 +24,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
-      working-directory: ./src/client/recipes-app/
     - run: npm run build --if-present
-      working-directory: ./src/client/recipes-app/
     - run: npm test
-      working-directory: ./src/client/recipes-app/
