--- a/.github/workflows/release_main_publish_react.yml
+++ b/.github/workflows/release_main_publish_react.yml
@@ -37,6 +37,6 @@ jobs:
         port: 21
         protocol: ftp
         local-dir: ./src/client/recipes-app/build/
-        server-dir: ./SUBDOMAINS/Recipes/
+        server-dir: ./SUBDOMAINS/Recipes/public/
 
 
