--- a/.github/workflows/release_main_publish_react.yml
+++ b/.github/workflows/release_main_publish_react.yml
@@ -1,8 +1,8 @@
 name: Release Prod Publish Node.js
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  release:
+    types: [published]
     
 defaults:
   run:
@@ -34,12 +34,6 @@ jobs:
       run: |
         echo REACT_APP_API_KEY_GetRecipesFunc=${{ secrets.API_KEY_GetRecipesFunc }} > .env
         echo REACT_APP_API_KEY_GetDailyMenuFunc=${{ secrets.API_KEY_GetDailyMenuFunc }} >> .env
-
-    - name: Show file content
-      run: |
-        pwd
-        ls -la
-        cat .env
 
     - name: NPM Build
       run: npm run build
